[project]
name = "FourthProject"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "rlaehgus97", email = "starkim625@gmail.com"},
    {name = "GITSANGWOO", email = "dogcenta@gmail.com"},
    {name = "hun0219", email = "gsw98000@gmail.com"},
    {name = "Esther", email = "dkgkqm777@gmail.com"},
    {name = "DONGUK777", email = "kimdongyork@gmail.com"},
]
dependencies = []
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
