[project]
name = "FourthProject"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "GITSangWoo", email = "dogcenta@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pytz>=2024.2",
    "pyYAML>=6.0.2",
    "streamlit>=1.40.1",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "numpy>=2.1.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
